1. Метод .of [#70623 #561160]